fix spacing

--- a/djsite/static/post.css
+++ b/djsite/static/post.css
@@ -2,14 +2,13 @@
     font-size: 10px;
     text-transform: uppercase;
     color: #808080;
-    line-height: 100%;
 }
 
 #main h1 {
     font-weight: normal;
     font-size: 20px;
     text-transform: uppercase;
-    letter-spaing: 1em;
+    letter-spacing: 0.1em;
     color: #e05000;
     margin-bottom: 3px;
 }
